adding react prop-types module for typechecking props

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "main": "src/components/index.jsx",
   "dependencies": {
     "normalize.scss": "^0.1.0",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-helmet": "^5.1.3",
