--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-addons-test-utils": "^15.6.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "svg-inline-loader": "^0.8.0",
     "webpack-dev-server": "^2.5.1"
   }
 }
