--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-helmet": "^5.1.3",
+    "react-particles-js": "^1.5.0",
     "webpack": "^3.3.0"
   },
   "scripts": {
