--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "webpack": "^3.3.0"
   },
   "scripts": {
-    "start": "webpack-dev-server",
-    "build:production": "NODE_ENV=production webpack -p",
+    "start": "webpack-dev-server --config webpack.dev.babel.js",
+    "build:production": "webpack -p --config webpack.prod.babel.js",
     "test": "jest"
   },
   "devDependencies": {
