--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-particles-js": "^1.5.0",
+    "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.3.0"
   },
   "scripts": {
